// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/EditChannelHeaderModal edit direct message channel 1`] = `
<EditChannelHeaderModal
  actions={
    Object {
      "closeModal": [MockFunction],
      "patchChannel": [MockFunction],
    }
  }
  channel={
    Object {
      "header": "Fake Channel",
      "id": "fake-id",
      "type": "D",
    }
  }
  ctrlSend={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
/>
`;

exports[`components/EditChannelHeaderModal error with intl message 1`] = `
<EditChannelHeaderModal
  actions={
    Object {
      "closeModal": [MockFunction],
      "patchChannel": [MockFunction],
    }
  }
  channel={
    Object {
      "header": "Fake Channel",
      "id": "fake-id",
    }
  }
  ctrlSend={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
/>
`;

exports[`components/EditChannelHeaderModal error without intl message 1`] = `
<EditChannelHeaderModal
  actions={
    Object {
      "closeModal": [MockFunction],
      "patchChannel": [MockFunction],
    }
  }
  channel={
    Object {
      "header": "Fake Channel",
      "id": "fake-id",
    }
  }
  ctrlSend={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
/>
`;

exports[`components/EditChannelHeaderModal should match snapshot, init 1`] = `
<EditChannelHeaderModal
  actions={
    Object {
      "closeModal": [MockFunction],
      "patchChannel": [MockFunction],
    }
  }
  channel={
    Object {
      "header": "Fake Channel",
      "id": "fake-id",
    }
  }
  ctrlSend={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
/>
`;

exports[`components/EditChannelHeaderModal submitted 1`] = `
<EditChannelHeaderModal
  actions={
    Object {
      "closeModal": [MockFunction],
      "patchChannel": [MockFunction],
    }
  }
  channel={
    Object {
      "header": "Fake Channel",
      "id": "fake-id",
    }
  }
  ctrlSend={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
/>
`;
